fixed aligning

--- a/style.css
+++ b/style.css
@@ -190,7 +190,9 @@ h3 {
     margin-bottom: 15px;
     font-size: 20px;
     font-family: monospace;
-    
+    display: flex;
+    flex-direction: column-reverse;
+    color: white;
 }
 
 
